--- a/woosin/src/main/resources/templates/index.html
+++ b/woosin/src/main/resources/templates/index.html
@@ -22,8 +22,8 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">회사소개</a></li>
+					<li><a href="index">Home</a></li>
+					<li><a href="woosinIntroduce">회사소개</a></li>
 					<li><a href="elements.html">인증/보유</a></li>
 					<li><a href="elements.html">기술자현황</a></li>
 					<li><a href="elements.html">주요실적</a></li>
@@ -157,36 +157,6 @@
 				</div>
 			</section>
 
-						<!-- Footer -->
-			<footer id="footer" class="wrapper">
-				<div class="inner">
-					<section>
-						<div class="box">
-							<div class="content">
-								<h2 class="align-center">공지사항</h2>
-
-							</div>
-						</div>
-					
-					</section>	
-				</div>
-			</footer>
-			<!-- Four -->
-			<section id="four" class="wrapper style3">
-				<div class="inner">
-
-					<header class="align-center">
-						<h2>회사개요</h2>
-						<p>상호: 주식회사 우신종합건설 [대표이사: 유광열]</p>
-						<p> 사업자 등록번호: 246-81-00380   법인등록번호 164611-0010007</p>
-						<p>연락처: Tel. 032) 549-2207/2208   Fax 032) 549-2209</p>
-						<p>소재지: 인천광역시 계양구 계양대로 138 4층(작전동)</p>
-						<p>보유면허: 건축공사업	04-0827</p>
-						</header>
-
-				</div>
-			</section>
-			
 		<!-- Footer -->
 			<footer id="footer" class="wrapper">
 				<div class="inner">
@@ -226,13 +196,31 @@
 								</form>
 							</div>
 						</div>
-						<div class="copyright">
-						&copy; Web Agency: kuoo
-						</div>
+						
 					</section>	
 				</div>
 			</footer>
+
 			
+			<!-- Four -->
+			<section id="four" class="wrapper style3">
+				<div class="inner">
+
+					<header class="align-center">
+						<h2>회사개요</h2>
+						<p>상호: 주식회사 우신종합건설 [대표이사: 유광열]</p>
+						<p> 사업자 등록번호: 246-81-00380   법인등록번호 164611-0010007</p>
+						<p>연락처: Tel. 032) 549-2207/2208   Fax 032) 549-2209</p>
+						<p>소재지: 인천광역시 계양구 계양대로 138 4층(작전동)</p>
+						<p>보유면허: 건축공사업	04-0827</p>
+						
+						<div class="copyright">
+						&copy; Web Agency: kuoo
+						</div>
+					</header>
+				</div>
+			</section>
+						
 			
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
