--- a/woosin/src/main/resources/templates/index.html
+++ b/woosin/src/main/resources/templates/index.html
@@ -5,17 +5,25 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>woosin</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
+<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
+<head>
+	<title>woosin</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
+ <style>
+    p,h3,li,a{
+      font-family: "Nanum Gothic", sans-serif;
+      font-size: 23px;
+    }
+
+</style>
 	<body>
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">우신종합건설[아이콘대체]</a></div>
+				<div class="logo"><a href="/index">우신종합건설</a></div>
 				<a href="#menu" class="toggle"><span>Menu</span></a>
 			</header>
 
@@ -76,29 +84,33 @@
 					<div id="flexgrid">
 						<div>
 							<header>
-								<h3>업무흐름표[아이콘]</h3>
+								<h3>업무흐름표</h3>
 							</header>
 							<p>Business chart</p>
+							<img src="images/203.png" alt="" style="filter:invert()" width="230px" height="180px" />
 							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
+								<li><a href="/woosinIntroduce2" class="button alt">Learn More</a></li>
 							</ul>
 						</div>
 						<div>
 							<header>
-								<h3>등록증[아이콘]</h3>
+								<h3>등록증</h3>
 							</header>
 							<p>Registration</p>
+							<img src="images/201.png" alt="" style="filter:invert()"  width="230px" height="180px" />
 							<ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
 							</ul>
+					
 						</div>
 						<div>
 							<header>
-								<h3>오시는길[아이콘]</h3>
+								<h3>오시는길</h3>
 							</header>
 							<p>way to come</p>
+							<img src="images/204.png" alt="" style="filter:invert()"  width="230px" height="180px" />
 							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
+								<li><a href="/woosinIntroduce3" class="button alt">Learn More</a></li>
 							</ul>
 						</div>
 					</div>
@@ -207,20 +219,15 @@
 				<div class="inner">
 
 					<header class="align-center">
-						<h2>회사개요</h2>
-						<p>상호: 주식회사 우신종합건설 [대표이사: 유광열]</p>
-						<p> 사업자 등록번호: 246-81-00380   법인등록번호 164611-0010007</p>
-						<p>연락처: Tel. 032) 549-2207/2208   Fax 032) 549-2209</p>
-						<p>소재지: 인천광역시 계양구 계양대로 138 4층(작전동)</p>
-						<p>보유면허: 건축공사업	04-0827</p>
-						
+						<p style="font-size:17px">대표 : 유광열 | 사업자번호 : 246-81-00380 | 주소 : 인천광역시 계양구 계양대로 138 4층(작전동)<br>
+						Tel : 032) 549-2207/2208 | Fax : 032) 549-2209 	</p>						
 						<div class="copyright">
-						&copy; Web Agency: kuoo
+						<p  style="font-size:17px">Copyright &copy; woosin<br>
+						Web Agency: kuoo</p>
 						</div>
 					</header>
 				</div>
 			</section>
-						
 			
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
