--- a/woosin/src/main/resources/templates/woosinIntroduce3.html
+++ b/woosin/src/main/resources/templates/woosinIntroduce3.html
@@ -6,7 +6,6 @@
 -->
 <html>
 <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
-
 <head>
 	<title>Generic - Transitive by TEMPLATED</title>
 	<meta charset="utf-8" />
@@ -128,82 +127,19 @@ button:hover:before,button:hover:after{
 						<img src="images/pic01.jpg" alt="" />
 					</div>
 
-					
-					
-					<div class="content">
-						<header class="align-center">
-							<h2>인사말씀</h2>
-						</header>
-						<hr />
-						<p align="center">믿음과 신뢰성을 가지고 아름다운 건물을 짓겠다는 신념을 가지고 전 직원이 한마음으로  공사품질관리, 원가절감, 부실방지로 </p>
-						<p align="center">절감된 비용을 고객에게 돌려주는 것을 원칙으로 하는 회사입니다. 회사 설립의 기본이념인 벗과 믿음, 인간으로써의 주거공간에</p>
-						<p align="center"> 대한 가치를 바탕으로 언제나 발주자의 입장에서 생각하고 사람의 기본 신용을 지키고, 전문기술인의 자부심과, 기술자로써의</p>
-						<p align="center"> 긍지를 가지고 항상 발주자의 사용용도에 맞는 아름다운 건물을 시공코져 노력하는 회사입니다. </p>
-					</div>
-					<hr />
 					<!-- Lists -->
 					
 					<div>
-					<h3 align="center">회사소개</h3>
+					<h3 align="center">오시는길</h3>
 					<div class="row">
-						<div class="6u 12u$(small)" align="center">
-
-							<h4  align="center">회사개요</h4>
-							<ul>
-								<li>상호: 주식회사 우신종합건설 [대표이사: 유광열]</li>
-								<li>사업자 등록번호: 246-81-00380   법인등록번호 164611-0010007</li>
-								<li>연락처: Tel. 032) 549-2207/2208   Fax 032) 549-2209</li>
-								<li>소재지: 인천광역시 계양구 계양대로 138 4층(작전동)</li>
-								<li>보유면허: 건축공사업	04-0827</li>
-								
-							</ul>
-						 </div>
-											
-					<div class="table-wrapper">
-					<h4 align="center">주요 사업 내용</h4>
-						<table class="alt">
-							<thead>
-								<tr>
-									<th align="center">건설부문</th>
-									<th align="center">컨설팅 부문, 제조/건설 컨설팅</th>
-									<th align="center">세무회계 부문</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>
-									공장건축물(VE전문)<br>
-									공동주택<br>
-									학교공사<br>
-									근린생활시설<br>
-									문화 및 종교시설등
-									</td>
-									<td>
-									경영혁신/정보개선<br>
-									SCM set System<br>
-									DP/DF/G-ERP개선<br>
-									기준정보/원가절감<br>
-									구조개선/KPI 관리
-									</td>
-									
-									<td>
-									각종 세무 상담<br>
-									기업진단 자문<br>
-									회계감사 자문<br>
-									각종 세무신고 및<br>
-									세무조정 자문등
-									</td>
-									
-								</tr>
-											
-								</tbody>
-							</table>
-							
-						</div>
+						
+				
 					</div>
 				</div>
-			<hr />	
-					
+				<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a343f0d2fda2b44b118d8300b55887de"></script>
+				<div id="map" style="width:100%;height:400px;">dd</div>
+				<h3>주소 : 인천광역시 계양구 계양대로 138 4층(작전동)</h3>	
+				<h3>Tel : 032) 549-2207/2208</h3>
 		</div>
 	</div>
 </section>
@@ -253,12 +189,33 @@ button:hover:before,button:hover:after{
 
 					
 	<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/skel.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
 
-	</body>
+<script>
+var container = document.getElementById('map');
+var options = {
+	center: new kakao.maps.LatLng(37.536078, 126.722890),
+	level: 3
+};
+
+var map = new kakao.maps.Map(container, options);
+
+//마커가 표시될 위치입니다 
+var markerPosition  = new kakao.maps.LatLng(37.536078, 126.722890); 
+
+// 마커를 생성합니다
+var marker = new kakao.maps.Marker({
+    position: markerPosition
+});
+
+// 마커가 지도 위에 표시되도록 설정합니다
+marker.setMap(map);
+</script>
+
+</body>
 </html>
