--- a/woosin/src/main/resources/templates/registrationWoosin.html
+++ b/woosin/src/main/resources/templates/registrationWoosin.html
@@ -24,8 +24,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="logo"><a href="/index">우신종합건설</a></div>
-				
-				<a href="#menu" class="toggle"><span>Menu</span></a>
+				<a href="#menu" class="toggle"><span>Menu</span>MENU</a>
 			</header>
 	
 		<!-- Nav -->
@@ -33,13 +32,46 @@
 				<ul class="links">
 					<li><a href="index">Home</a></li>
 					<li><a href="woosinIntroduce">회사소개</a></li>
-					<li><a href="elements.html">인증/보유</a></li>
-					<li><a href="elements.html">기술자현황</a></li>
+					<li><a href="registrationWoosin">인증/보유</a></li>
+					<li><a href="coperrationWoosin">기술자현황/실적</a></li>
 					<li><a href="elements.html">주요실적</a></li>
 					<li><a href="elements.html">커뮤니티</a></li>
 				</ul>
 			</nav>
-		
+	<!-- Two -->
+			<section id="two" class="wrapper style3">
+				<div class="inner">
+					<div id="flexgrid">
+						<div>
+							<header>
+								<h3>업무흐름표</h3>
+							</header>
+							<img src="images/203.png" alt="" style="filter:invert()" width="230px" height="180px" />
+							<ul class="actions">
+								<li><a href="/woosinIntroduce2" class="button alt">Learn More</a></li>
+							</ul>
+						</div>
+						<div>
+							<header>
+								<h3>등록증</h3>
+							</header>
+							<img src="images/201.png" alt="" style="filter:invert()"  width="230px" height="180px" />
+							<ul class="actions">
+								<li><a href="/registrationWoosin" class="button alt">Learn More</a></li>
+							</ul>
+						</div>
+						<div>
+							<header>
+								<h3>오시는길</h3>
+							</header>
+							<img src="images/204.png" alt="" style="filter:invert()"  width="230px" height="180px" />
+							<ul class="actions">
+								<li><a href="/woosinIntroduce3" class="button alt">Learn More</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>		
 	
 		<!-- One -->
 			<section id="one" class="wrapper style2">
@@ -50,60 +82,37 @@
 						</div>
 						<div class="content">
 							<header class="align-center">
-								<h2>Lorem ipsum dolor</h2>
-								<p>maecenas feugiat ex purus, quis volutpat lacus placerat</p>
+								<h2>보유 허가증 및 등록증</h2>
 							</header>
 							<hr />
-							<p> 동해물과 백두산이 Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
-							<p>Vivamus fermentum nibh vel pharetra blandit. Cras a purus urna. Sed et libero ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse id hendrerit felis. Nulla viverra tempor dui at congue. Pellentesque quis nulla ornare, congue nisi id, finibus nulla. Aliquam sit amet hendrerit purus. Donec libero massa, posuere fermentum eros sit amet, maximus fringilla augue. Maecenas at rhoncus lorem. Vivamus ultricies consequat est, efficitur convallis libero. Vivamus rutrum semper mauris, vitae consequat eros tempor ac. Pellentesque et ornare sapien</p>
-						</div>
+							<div class="align-center">
+							<img src="images/501.png"/>
+							<img src="images/502.png"/>
+							<img src="images/503.png"/>
+							<img src="images/504.png"/>
+							</div>
+							
+							</div>
 					</div>
 				</div>
 			</section>
 	
+
 			
-		<!-- Two -->
-			<section id="two" class="wrapper style3">
+			<!-- Four -->
+			<section id="four" class="wrapper style3">
 				<div class="inner">
-					<div id="flexgrid">
-						<div>
-							<header>
-								<h3>업무흐름표</h3>
-							</header>
-							<p>Business chart</p>
-							<img src="images/203.png" alt="" style="filter:invert()" width="230px" height="180px" />
-							<ul class="actions">
-								<li><a href="/woosinIntroduce2" class="button alt">Learn More</a></li>
-							</ul>
-						</div>
-						<div>
-							<header>
-								<h3>등록증</h3>
-							</header>
-							<p>Registration</p>
-							<img src="images/201.png" alt="" style="filter:invert()"  width="230px" height="180px" />
-							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
-							</ul>
+
+					<header class="align-center">
+						<p style="font-size:17px">대표 : 유광열 | 사업자번호 : 246-81-00380 | 주소 : 인천광역시 계양구 계양대로 138 4층(작전동)<br>
+						Tel : 032) 549-2207/2208 | Fax : 032) 549-2209 	</p>						
 						<div class="copyright">
-						<p style="font-size:17px">Copyright &copy; woosin<br>
+						<p  style="font-size:17px">Copyright &copy; woosin<br>
 						Web Agency: kuoo</p>
 						</div>
-						</div>
-						<div>
-							<header>
-								<h3>오시는길</h3>
-							</header>
-							<p>way to come</p>
-							<img src="images/204.png" alt="" style="filter:invert()"  width="230px" height="180px" />
-							<ul class="actions">
-								<li><a href="/woosinIntroduce3" class="button alt">Learn More</a></li>
-							</ul>
-						</div>
-					</div>
+					</header>
 				</div>
 			</section>
-	
 						
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
