--- a/woosin/src/main/resources/templates/templet.html
+++ b/woosin/src/main/resources/templates/templet.html
@@ -24,8 +24,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="logo"><a href="/index">우신종합건설</a></div>
-				
-				<a href="#menu" class="toggle"><span>Menu</span></a>
+				<a href="#menu" class="toggle"><span>Menu</span>MENU</a>
 			</header>
 	
 		<!-- Nav -->
@@ -33,13 +32,46 @@
 				<ul class="links">
 					<li><a href="index">Home</a></li>
 					<li><a href="woosinIntroduce">회사소개</a></li>
-					<li><a href="elements.html">인증/보유</a></li>
-					<li><a href="elements.html">기술자현황</a></li>
+					<li><a href="registrationWoosin">인증/보유</a></li>
+					<li><a href="coperrationWoosin">기술자현황/실적</a></li>
 					<li><a href="elements.html">주요실적</a></li>
 					<li><a href="elements.html">커뮤니티</a></li>
 				</ul>
 			</nav>
-		
+	<!-- Two -->
+			<section id="two" class="wrapper style3">
+				<div class="inner">
+					<div id="flexgrid">
+						<div>
+							<header>
+								<h3>업무흐름표</h3>
+							</header>
+							<img src="images/203.png" alt="" style="filter:invert()" width="230px" height="180px" />
+							<ul class="actions">
+								<li><a href="/woosinIntroduce2" class="button alt">Learn More</a></li>
+							</ul>
+						</div>
+						<div>
+							<header>
+								<h3>등록증</h3>
+							</header>
+							<img src="images/201.png" alt="" style="filter:invert()"  width="230px" height="180px" />
+							<ul class="actions">
+								<li><a href="/registrationWoosin" class="button alt">Learn More</a></li>
+							</ul>
+						</div>
+						<div>
+							<header>
+								<h3>오시는길</h3>
+							</header>
+							<img src="images/204.png" alt="" style="filter:invert()"  width="230px" height="180px" />
+							<ul class="actions">
+								<li><a href="/woosinIntroduce3" class="button alt">Learn More</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>		
 	
 		<!-- One -->
 			<section id="one" class="wrapper style2">
@@ -61,49 +93,22 @@
 				</div>
 			</section>
 	
+
 			
-		<!-- Two -->
-			<section id="two" class="wrapper style3">
+			<!-- Four -->
+			<section id="four" class="wrapper style3">
 				<div class="inner">
-					<div id="flexgrid">
-						<div>
-							<header>
-								<h3>업무흐름표</h3>
-							</header>
-							<p>Business chart</p>
-							<img src="images/203.png" alt="" style="filter:invert()" width="230px" height="180px" />
-							<ul class="actions">
-								<li><a href="/woosinIntroduce2" class="button alt">Learn More</a></li>
-							</ul>
-						</div>
-						<div>
-							<header>
-								<h3>등록증</h3>
-							</header>
-							<p>Registration</p>
-							<img src="images/201.png" alt="" style="filter:invert()"  width="230px" height="180px" />
-							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
-							</ul>
+
+					<header class="align-center">
+						<p style="font-size:17px">대표 : 유광열 | 사업자번호 : 246-81-00380 | 주소 : 인천광역시 계양구 계양대로 138 4층(작전동)<br>
+						Tel : 032) 549-2207/2208 | Fax : 032) 549-2209 	</p>						
 						<div class="copyright">
-						<p style="font-size:17px">Copyright &copy; woosin<br>
+						<p  style="font-size:17px">Copyright &copy; woosin<br>
 						Web Agency: kuoo</p>
 						</div>
-						</div>
-						<div>
-							<header>
-								<h3>오시는길</h3>
-							</header>
-							<p>way to come</p>
-							<img src="images/204.png" alt="" style="filter:invert()"  width="230px" height="180px" />
-							<ul class="actions">
-								<li><a href="/woosinIntroduce3" class="button alt">Learn More</a></li>
-							</ul>
-						</div>
-					</div>
+					</header>
 				</div>
 			</section>
-	
 						
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
