--- a/woosin/src/main/resources/templates/index.html
+++ b/woosin/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 
 </style>
 	<body>
-
+			
 		<!-- Header -->
 			<header id="header" class="alt">
 				<div class="logo"><a href="/index">우신종합건설</a></div>
@@ -46,11 +46,10 @@
 			its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
 			formats to work correctly.
 		-->
-			<section id="banner" data-video="images/banner">
+			<section id="banner" data-video="images/banner" >
 				<div class="inner">
 					<h1>Woosin Comprehensive Construction</h1>
 					<p>창의적인 기술로 미래를 혁신하는 기업 우신건설<br/></p>
-					
 				</div>
 			</section>
 
@@ -60,7 +59,7 @@
 					<div>
 						<div class="box">
 							<div class="image fit">
-								<img src="images/pic01.jpg" alt="" />
+								<img src="images/608.jpg" height="380px" alt="" />
 							</div>
 							<div class="content">
 								<header class="align-center">
@@ -208,7 +207,6 @@
 								</form>
 							</div>
 						</div>
-						
 					</section>	
 				</div>
 			</footer>
@@ -228,14 +226,14 @@
 					</header>
 				</div>
 			</section>
-			
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/skel.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+			
 
 	</body>
 </html>
