--- a/woosin/src/main/resources/templates/registrationWoosin.html
+++ b/woosin/src/main/resources/templates/registrationWoosin.html
@@ -78,7 +78,7 @@
 				<div class="inner">
 					<div class="box">
 						<div class="image fit">
-							<img src="images/pic01.jpg" alt="" />
+							<img src="images/603.jpg" height="400px" alt="" />
 						</div>
 						<div class="content">
 							<header class="align-center">
@@ -86,10 +86,10 @@
 							</header>
 							<hr />
 							<div class="align-center">
-							<img src="images/501.png"/>
-							<img src="images/502.png"/>
-							<img src="images/503.png"/>
-							<img src="images/504.png"/>
+							<img width="500" height="800" src="images/501.png"/>
+							<img width="500" height="800" src="images/502.png"/>
+							<img width="500" height="800" src="images/503.png"/>
+							<img width="500" height="800" src="images/504.png"/>
 							</div>
 							
 							</div>
