--- a/woosin/src/main/resources/templates/woosinIntroduce.html
+++ b/woosin/src/main/resources/templates/woosinIntroduce.html
@@ -18,7 +18,6 @@
 /* Style the top navigation bar */
 .topnav {
   overflow: hidden;
-  background-color: #333;
 }
 
 /* Style the topnav links */
@@ -153,12 +152,14 @@ button:hover:before,button:hover:after{
 				  <a href="#"></a>
 				  <button onclick = "location.href = '/woosinIntroduce'">인사말씀</button>
 				  <button onclick = "location.href = '/woosinIntroduce2'">업무흐름표</button>
-				  <button onclick = "location.href = '/woosinIntroduce3'">오시는길</button>	
+				  <button onclick = "location.href = '/woosinIntroduce3'">오시는길</button>
+				  <br>
+				  <br>	
 				</div>
 					
 				<div class="box">
 					<div class="image fit">
-						<img src="images/pic01.jpg" alt="" />
+						<img src="images/604.jpg" height="400px" />
 					</div>
 
 					
