--- a/woosin/src/main/resources/templates/woosinIntroduce3.html
+++ b/woosin/src/main/resources/templates/woosinIntroduce3.html
@@ -17,7 +17,7 @@
 /* Style the top navigation bar */
 .topnav {
   overflow: hidden;
-  background-color: #333;
+
 }
 
 /* Style the topnav links */
@@ -153,11 +153,13 @@ button:hover:before,button:hover:after{
 				  <button onclick = "location.href = '/woosinIntroduce'">인사말씀</button>
 				  <button onclick = "location.href = '/woosinIntroduce2'">업무흐름표</button>
 				  <button onclick = "location.href = '/woosinIntroduce3'">오시는길</button>	
+		  <br>
+		  <br>
 				</div>
 					
 				<div class="box">
 					<div class="image fit">
-						<img src="images/pic01.jpg" alt="" />
+						<img src="images/601.jpg" height="400px" alt="" />
 					</div>
 
 					<!-- Lists -->
