<woosin> 카피라이트 변경,연혁 타임라인 데이터베이스기반 기능 구현, CSS변경, 서버 카카오맵 키값추가, 어드민 인덱스
1. 고객 요구사항에따른 전반적인 css 교체완료
2. 연혁/타임라인 리스트 확인 기능추가 차후 crud 예정
<쿼리 오름차순 사용으로 타임라인 정리확인>
3. 서버 카카오지도 확인 서비스 버그 발견후 수정완료
4. 어드민 인덱스 폼추가 세션값 차후 추가예정

--- a/woosin/src/main/resources/templates/coperrationWoosin3.html
+++ b/woosin/src/main/resources/templates/coperrationWoosin3.html
@@ -17,7 +17,7 @@
 th,td{
 font-family: "Nanum Gothic", sans-serif;
 font-size: 18px;
-font-weight: bold ;
+color: black;
 }
 /* Style the top navigation bar */
 .topnav {
@@ -95,7 +95,7 @@ button:hover:before,button:hover:after{
 					<li><a href="index">Home</a></li>
 					<li><a href="woosinIntroduce">회사소개</a></li>
 					<li><a href="registrationWoosin">인증/보유</a></li>
-					<li><a href="coperrationWoosin">기술자현황/실적</a></li>
+					<li><a href="coperrationWoosin">주요사업내용/실적</a></li>
 					<li><a href="elements.html">주요실적</a></li>
 					<li><a href="elements.html">커뮤니티</a></li>
 				</ul>
@@ -147,10 +147,8 @@ button:hover:before,button:hover:after{
 		  <a href="#"></a>
 		  <a href="#"></a>
 		  <a href="#"></a>
-		  <a href="#"></a>
-		  <a href="#"></a>
-		  <button onclick = "location.href = '/coperrationWoosin3'">기술자 현황</button>
-		  <button onclick = "location.href = '/coperrationWoosin'">관급및 민강공사</button>
+		  <button onclick = "location.href = '/coperrationWoosin3'">주요 사업 내용</button>
+		  <button onclick = "location.href = '/coperrationWoosin'">관급및 민간공사</button>
 		  <button onclick = "location.href = '/coperrationWoosin2'">공장및 물류센터</button>	
 		  <br>
 		  <br>
@@ -160,46 +158,59 @@ button:hover:before,button:hover:after{
 				<div class="image fit">
 					<img src="images/707.jpg" height="400" alt="" />
 				</div>
-				<div class="content">
-					<header class="align-center">
-						<h2>실적 내용</h2>
-					</header>
-					<hr />	 	
-				  	 	
-				  	 	<table>
-				  	 	<h3>관급및 민간공사</h3>
-						  <tr>
-						    <th align="center">번호</th>
-						    <th align="center">이름</th>
-						    <th align="center">기간</th>
-						    <th align="center">ㅇㅇ</th>
-						    <th align="center">ㄷㄷ</th>
-						  </tr>
-						  
-							  <tr th:each="str:${map.list}">
-							    <td th:text="${str.corperrationNo}" style="color: black;">corperrationNo</td>
-							    <td th:text="${str.corperrationName}" style="color: black;">corperrationName</td>
-							    <td th:text="${str.corperrationDate}" style="color: black;">corperrationDate</td>
-							    <td th:text="${str.corperrationPrice}" style="color: black;">corperrationPrice</td>
-							    <td th:text="${str.corperrationBigo}" style="color: black;">corperrationBigo</td>
-							  </tr>
-						  
-						</table>
-				    </div>
-				    <a th:if="${map.currentPage > 1}" th:href="@{/coperrationWoosin3?(currentPage=${map.currentPage-1})}">이전</a>
-				    <a th:if="${map.currentPage < map.lastPage}" th:href="@{/coperrationWoosin3?(currentPage=${map.currentPage+1})}">다음</a>
-					</div>
+			<div class="table-wrapper">
+						<table class="alt">
+							<thead>
+								<tr>
+									<th align="center">건설부문</th>
+									<th align="center">컨설팅 부문, 제조/건설 컨설팅</th>
+									<th align="center">세무회계 부문</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>
+									공장건축물(VE전문)<br>
+									공동주택<br>
+									학교공사<br>
+									근린생활시설<br>
+									문화 및 종교시설등
+									</td>
+									<td>
+									경영혁신/정보개선<br>
+									SCM set System<br>
+									DP/DF/G-ERP개선<br>
+									기준정보/원가절감<br>
+									구조개선/KPI 관리
+									</td>
+									
+									<td>
+									각종 세무 상담<br>
+									기업진단 자문<br>
+									회계감사 자문<br>
+									각종 세무신고 및<br>
+									세무조정 자문등
+									</td>
+									
+								</tr>
+											
+								</tbody>
+							</table>
+							
+						</div>
+			</div>
 			</div>
 	</section>
 	
-
+			
 			
 			<!-- Four -->
 			<section id="four" class="wrapper style3">
 				<div class="inner">
 
 					<header class="align-center">
-						<p style="font-size:17px">대표 : 유광열 | 사업자번호 : 246-81-00380 | 주소 : 인천광역시 계양구 계양대로 138 4층(작전동)<br>
+						<p style="font-size:17px">대표 : 유광열 | 사업자번호 : 246-81-00380<br>
+						주소 : 인천광역시 계양구 계양대로 138 4층(작전동)<br>
 						Tel : 032) 549-2207/2208 | Fax : 032) 549-2209 	</p>						
 						<div class="copyright">
 						<p  style="font-size:17px">Copyright &copy; woosin<br>
