--- a/woosin/src/main/resources/templates/index.html
+++ b/woosin/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
 					<li><a href="index">Home</a></li>
 					<li><a href="woosinIntroduce">회사소개</a></li>
 					<li><a href="registrationWoosin">인증/보유</a></li>
-					<li><a href="coperrationWoosin">기술자현황/실적</a></li>
+					<li><a href="coperrationWoosin">주요사업내용/실적</a></li>
 					<li><a href="elements.html">주요실적</a></li>
 					<li><a href="elements.html">커뮤니티</a></li>
 					
@@ -64,14 +64,19 @@
 							</div>
 							<div class="content">
 								<header class="align-center">
+								<h3> 2020-01-03 카피라이트 변경, 연혁 타임라인 데이터베이스기반 기능 구현, css변경, 서버 카카오맵 키값추가</h3>
 									<h2>대표 서비스</h2>
 									<p>Main Service</p>
 								</header>
 								<hr/>
+								
 								<!--  폰트변경 예정 진하게 -->
 								<p align="center">[폰트변경 예정 진하게] 혁신이상의 기술을 보유한 우신건설 홈페이지를 찾아주신 고객여러분 진심으로 환영합니다. </p>
 								<p align="center">믿음과 신뢰성을 가지고 아름다운 건물을 짓겠다는 신념을 가지고 전 직원이 한마음으로  공사품질관리,</p>
 								<p align="center">원가절감,부실방지로 절감된 비용을 고객에게 돌려주는 것을 원칙으로 하는 회사입니다.</p>
+								
+								
+							
 								</div>
 						</div>
 					</div>
@@ -218,7 +223,8 @@
 				<div class="inner">
 
 					<header class="align-center">
-						<p style="font-size:17px">대표 : 유광열 | 사업자번호 : 246-81-00380 | 주소 : 인천광역시 계양구 계양대로 138 4층(작전동)<br>
+						<p style="font-size:17px">대표 : 유광열 | 사업자번호 : 246-81-00380<br>
+						 주소 : 인천광역시 계양구 계양대로 138 4층(작전동)<br>
 						Tel : 032) 549-2207/2208 | Fax : 032) 549-2209 	</p>						
 						<div class="copyright">
 						<p  style="font-size:17px">Copyright &copy; woosin<br>
