--- a/woosin/src/main/resources/templates/coperrationWoosin2.html
+++ b/woosin/src/main/resources/templates/coperrationWoosin2.html
@@ -94,7 +94,7 @@ button:hover:before,button:hover:after{
 					<li><a href="index">Home</a></li>
 					<li><a href="woosinIntroduce">회사소개</a></li>
 					<li><a href="registrationWoosin">인증/보유</a></li>
-					<li><a href="coperrationWoosin">기술자현황/실적</a></li>
+					<li><a href="coperrationWoosin">주요사업내용/실적</a></li>
 					<li><a href="elements.html">주요실적</a></li>
 					<li><a href="elements.html">커뮤니티</a></li>
 				</ul>
@@ -146,10 +146,8 @@ button:hover:before,button:hover:after{
 		  <a href="#"></a>
 		  <a href="#"></a>
 		  <a href="#"></a>
-		  <a href="#"></a>
-		  <a href="#"></a>
-		  <button onclick = "location.href = '/coperrationWoosin3'">기술자 현황</button>
-		  <button onclick = "location.href = '/coperrationWoosin'">관급및 민강공사</button>
+		  <button onclick = "location.href = '/coperrationWoosin3'">주요 사업 내용</button>
+		  <button onclick = "location.href = '/coperrationWoosin'">관급및 민간공사</button>
 		  <button onclick = "location.href = '/coperrationWoosin2'">공장및 물류센터</button>	
 		  <br>
 		  <br>
@@ -197,7 +195,8 @@ button:hover:before,button:hover:after{
 				<div class="inner">
 
 					<header class="align-center">
-						<p style="font-size:17px">대표 : 유광열 | 사업자번호 : 246-81-00380 | 주소 : 인천광역시 계양구 계양대로 138 4층(작전동)<br>
+						<p style="font-size:17px">대표 : 유광열 | 사업자번호 : 246-81-00380<br>
+						주소 : 인천광역시 계양구 계양대로 138 4층(작전동)<br>
 						Tel : 032) 549-2207/2208 | Fax : 032) 549-2209 	</p>						
 						<div class="copyright">
 						<p  style="font-size:17px">Copyright &copy; woosin<br>
